# thesis

./: .gitignore  datasetting.py  finetune.job  log.md  main.py  pyproject.toml  rewards.py  test.sh  test_rewards.py  test_type_rewards.py  watch.sh
datasets/: handcrafted.txt
datasetting/: __init__.py  handcrafted.txt  test_datasets.py  test_metaset3.py
synthwave/: __init__.py  dsl.py  eval.py  helpers.py  mlx.py  parser.py  synthwave.py  test_dsl.py  torch.py  typing.py
