[project]
name = "synthwave"
version = "0.0.0"
description = ""
readme = "log.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.30.1",
    "mlx>=0.24.2",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "transformers>=4.51.0",
    "trl>=0.15.2",
    "unsloth",
    "unsloth-zoo>=2025.3.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/shashikanth-a/unsloth.git", branch = "apple_silicon_support" }

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false