[project]
name = "synthwave"
version = "0.0.0"
description = ""
readme = "log.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub",
    "lark",
    "numpy",
    "torch>=2.6.0",
    "transformers",
    "trl",
    "unsloth",
    "unsloth-zoo",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/shashikanth-a/unsloth.git", branch = "apple_silicon_support" }

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
